// Copyright 2021-2025 Zenauth Ltd.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package cerbos.cloud.epdp.v1;

import "cerbos/policy/v1/policy.proto";

option csharp_namespace = "Cerbos.Api.Cloud.V1.Epdp";
option go_package = "github.com/cerbos/cloud-api/genpb/cerbos/cloud/epdp/v1;epdpv1";
option java_package = "dev.cerbos.api.cloud.v1.epdp";

message Metadata {
  string version = 1;
  repeated string policies = 2 [deprecated = true];
  int64 build_timestamp = 3;
  string commit_hash = 4;
  map<string, cerbos.policy.v1.SourceAttributes> source_attributes = 5;
}
